clubs profile edit page, user profile edit page, user profile page => html and css file, + clubs page html

--- a/src/main/resources/static/css/editUserProfilePage.css
+++ b/src/main/resources/static/css/editUserProfilePage.css
@@ -155,12 +155,13 @@ nav ul li ul li a {
     background: linear-gradient(180deg, #45818F 0%, rgba(69, 129, 143, 0) 100%);
 }
 .top img{
-	width: 170px;
-	height: 170px;
-	margin: 40px auto;
-	display: block;
+    width: 170px;
+    height: 170px;
+    margin: 40px auto;
+    display: block;
 }
 #profilephoto {
+    position: relative;
     width: 170px;
     height: 170px;
     margin: 40px auto;
@@ -168,103 +169,65 @@ nav ul li ul li a {
     background: linear-gradient(224.89deg, #986581 3.15%, #5C729D 100%);
 }
 
-#userName{
+.profilegrey{
     position: relative;
-    margin: auto;
-    top: -15px;
-    font-family: Noto Serif Kannada, sans-serif;
-    font-size: 26px;
+    top: -210px;
+    margin: 40px auto;
+    width: 170px;
+    height: 170px;
+    display: block;
+    background: rgba(94, 94, 94, 0.33);
+}
+
+.changeprofile{
+    position: relative;
+    top: -420px;
+    margin: 40px auto;
+    width: 159px;
+    height: 36px;
+    border: none;
+
+    display: block;
+    background: rgba(240, 240, 240, 0.25);
+    border-radius: 10px;
+    cursor: pointer;
+    font-family: Poly, sans-serif;
+
+    font-size: 12.5px;
     color: #5A5A5A;
 }
 
+.top{
+    height: 240px;
+}
+
 .top p{
-	display: block;
-	text-align: center;
+    display: block;
+    text-align: center;
 }
 
 .middle {
-	overflow: hidden;
-	margin: 0 auto;
+    overflow: hidden;
+    margin: 0 auto;
     z-index: -1;
 }
 
 .info {
-	float: left;
-	list-style: none;
+    float: left;
+    list-style: none;
     position: relative;
     top: -10px;
     left: 40px;
 }
+
 .social {
-	float: right;
-	list-style: none;
-	position: relative;
-	top: -10px;
-	right: 70px;
+    float: right;
+    list-style: none;
+    position: relative;
+    top: -10px;
+    right: 70px;
     font-weight: bold;
 }
-
-.bottom {
-	overflow: hidden;
-    padding-top: 28px;
-}
-
-#events{
-	width: 90%;
-	margin: 20px auto 0;
-}
-#events table{
-	width: 100%;
-}
-#events img{
-	width: 200px;
-	height: 150px;
-    object-fit: cover;
-}
-#events p{
-	margin-top: 0;
-	margin-left: 10px;
-}
-
-#memberships {
-	display: none;
-	width: 90%;
-	margin: 20px auto 0;
-}
-#memberships table{
-	width: 100%;
-}
-#memberships img{
-	width: 150px;
-	height: 150px;
-    object-fit: cover;
-}
-#memberships p{
-	margin-top: 0;
-	margin-left: 10px;
-}
-
-#lineWhite {
-    position: relative;
-	width: 100%;
-	height: 15px;
-	margin: 17px auto 0;
-
-	background: #FFFFFF;
-    z-index: 1;
-}
-
-#lineGray {
-    position: relative;
-    width: 92%;
-    height: 2px;
-    margin: -11px auto 0;
-
-    background: #C4C4C4;
-    z-index: 2;
-}
-
-
 /* buttons customize --------------------*/
 button {
     font-family: Poly, sans-serif;
@@ -326,56 +289,93 @@ button:hover {
     margin-top: -20px;
 }
 
-.pencil{
+.savebutton{
     position: absolute;
-    margin-left: 1440px;
-    top: 90px;
-    opacity: 0.8;
+    margin-left: 95%;
+    top: 88px;
+    /*width: 79px;*/
+    height: 34px;
+
+    background: rgba(255, 255, 255, 0.5);
+    border: 1px solid #0657A8;
+    box-sizing: border-box;
+    border-radius: 5px;
+    cursor: pointer;
+
+    font-family: Poly, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #0657A8;
 }
 
-.triangle{
-    position: absolute;
-    margin-left: 12px;
-    top: 31px;
+/* edit boxes ----------------------*/
+textarea {
+    resize: none;
+    padding: 0 0;
+    margin: 8px 8px;
+    border: none;
+    outline: none;
+    background: none;
+    font-family: Poly, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 26px;
+    display: flex;
+    align-items: center;
 
-    width: 0;
-    height: 0;
-    border: 8px solid transparent;
-    border-top: 0;
-    border-bottom: 8px solid #3C3C3C;
-    transform: rotate(-132deg);
+    color: #898989;
 }
 
-.rec1{
-    position: absolute;
-    margin-left: 30px;
-    top: 1px;
-
-    height: 35.8px;
-    width: 15px;
-    background-color: #3C3C3C;
-    transform: rotate(48deg);
+.textProperties{
+    background: #F0F0F0;
+    padding-left: 8px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.rec2{
-    position: absolute;
-    margin-left: 46px;
-    top: 2px;
-
-    height: 5px;
-    width: 15px;
-    background-color: #3C3C3C;
-    transform: rotate(48deg);
+.userNameTextBox{
+    position: relative;
+    top: -230px;
+    margin: 40px auto;
 }
 
-.rec3{
-    position: absolute;
-    margin-left: 48px;
-    top: 0;
+.departmentBox{
+    position: relative;
+    margin-left: 110px;
+    margin-top: -40px;
+}
 
-    height: 5px;
-    width: 15px;
-    background-color: #3C3C3C;
-    transform: rotate(48deg);
-    border-radius: 10px;
+.DOBbox {
+    position: relative;
+    margin-left: 110px;
+    margin-top: -40px;
+}
+
+.startOfStudiesBox{
+    position: relative;
+    margin-left: 110px;
+    margin-top: -40px;
+}
+
+.emailBox{
+    position: relative;
+    margin-left: 100px;
+}
+
+.instaBox{
+    position: relative;
+    margin-left: 100px;
+}
+
+.linkedinBox{
+    position: relative;
+    margin-left: 100px;
 }
