--- a/src/main/resources/templates/clubs/list.html
+++ b/src/main/resources/templates/clubs/list.html
@@ -58,6 +58,36 @@
             <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
                 <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
         </li>
+        <li class="oneClassElement">
+            <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
+            <a class="clubName" href="" th:text="${club.name}"></a>
+            <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
+                <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
+        </li>
+        <li class="oneClassElement">
+            <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
+            <a class="clubName" href="" th:text="${club.name}"></a>
+            <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
+                <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
+        </li>
+        <li class="oneClassElement">
+            <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
+            <a class="clubName" href="" th:text="${club.name}"></a>
+            <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
+                <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
+        </li>
+        <li class="oneClassElement">
+            <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
+            <a class="clubName" href="" th:text="${club.name}"></a>
+            <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
+                <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
+        </li>
+        <li class="oneClassElement">
+            <a href=""><img class="clubPhoto" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="club photo"/></a>
+            <a class="clubName" href="" th:text="${club.name}"></a>
+            <div class="buttonsDiv"><button class= "followButton" type="submit">follow</button>
+                <button class= "goToProfilePageButton" type="submit">go to profile</button></div>
+        </li>
     </ul>
 </div>
 
