--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -1,10 +1,84 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Edit Profile Page</title>
+    <link rel="stylesheet" href="../../static/css/editUserProfilePage.css">
+    <style>
+        Body {
+            font-family: Calibri, Helvetica, sans-serif;
+            background-color: white;
+            color: #8C8C8C;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
 
+<section class="navigation">
+    <div class="nav-container">
+        <div class="brand">
+            <a href="#!">Sigma</a>
+        </div>
+        <nav>
+            <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+            <ul class="nav-list">
+                <li>
+                    <a href="#!">Clubs</a>
+                </li>
+                <li>
+                    <a href="#!">Events</a>
+                </li>
+                <li>
+                    <a href="#!">Schedule</a>
+                </li>
+                <li>
+                    <a href="#!" style="background: #3C6D79">Profile</a>
+                </li>
+                <li>
+                    <a id="signout" href="#!">Sign Out</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</section>
+
+<div id="gradient"></div>
+
+<div class="top">
+    <img id="profilephoto" src="" alt="profile photo"/>
+    <div class="profilegrey"></div>
+    <div class="userNameTextBox"><textarea class="textProperties" rows="1" cols="26" th:text="${}"></textarea></div>
+    <button class= "changeprofile" type="submit">change profile photo</button>
+</div>
+
+<button class= "savebutton" type="submit">save</button>
+
+<div class="middle">
+    <ul class="info">
+        <li><p>Department: </p><div class="departmentBox">
+            <textarea class="textProperties" rows="1" cols="20" th:text="${}"></textarea></div>
+        </li>
+        <li><p>Date of birth: </p><div class="DOBbox">
+            <textarea class="textProperties" rows="1" cols="20" th:text="${}"></textarea></div>
+        </li>
+        <li><p>Start of studies: </p><div class="startOfStudiesBox">
+            <textarea class="textProperties" rows="1" cols="20" th:text="${}"></textarea></div>
+        </li>
+    </ul>
+    <ul class="social">
+        <li><div class="emailBox">
+            <textarea class="textProperties" rows="1" cols="40" th:text="${}"></textarea></div>
+        </li>
+        <li><div class="instaBox">
+            <textarea class="textProperties" rows="1" cols="40" th:text="${}"></textarea></div>
+        </li>
+        <li><div class="linkedinBox">
+            <textarea class="textProperties" rows="1" cols="40" th:text="${}"></textarea></div>
+        </li>
+    </ul>
+</div>
+
 </body>
+
 </html>
+
