--- a/src/main/resources/templates/user/show.html
+++ b/src/main/resources/templates/user/show.html
@@ -117,6 +117,15 @@
 
 <script src="../../static/js/userProfilePage.js"></script>
 
+<button>
+    <div class="pencil">
+        <div class="triangle"></div>
+        <div class="rec1"></div>
+        <div class="rec2"></div>
+        <div class="rec3"></div>
+    </div>
+</button>
+
 </body>
 
 </html>
