--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,40 +1,88 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/%22%3E
 <head>
-	<title> Create Event </title>
+    <title> Create Event </title>
     <meta charset="UTF-8">
+	<link rel="stylesheet" href="C:\Users\90539\Documents\GitHub\Student-Club-Manager-Group2A\src\main\resources\static\css\navbar.css">
     <title>Create Event Page</title>
     <style>
         h1 {text-align: center;}
-        input, #S, #createButton{
-            position: absolute;
-            left: 200px;
-        }
-        #eventCreateForm {
+        #eventForm {
+			background-color: purple;
             width: 50%;
             margin: auto;
-            
-        }
 
+        }
+            .box span.label {
+            display: inline-block;
+            margin-bottom: 20px;
+            vertical-align: top;
+            width: 80px;
+        }
+		Body {
+            font-family: Calibri, Helvetica, sans-serif;
+            background-color: white;
+            margin: auto;
+        }
+		
     </style>
 </head>
-<body>
-	<h1> CREATE YOUR EVENT </h1>
-    <div id = "eventCreateForm">
-        <form action="/action_page.php">
-          <label for="eventName">Event Name:</label>
-          <input type="text" id="eventName" name="namebox"><br>
-          <label for="eventPlace">Place:</label>
-          <input type="text" id="eventPlace" name="placebox"><br>
-          <label for "club">Club:</label>
-          <input type="search" id="eventClub" name:"clubbox"><br>
-          <label for="eventDate">Event Dates:</label>
-          <input type="date" id="dateMin" name="eventdateminbox"> - <input type="date" id="dateMax" name="eventdatemaxbox"> <br>
-          <label for="appDate">Application Period:</label>
-          <input type="date" id="appDateMin" name="appdateminbox"> - <input type="date" id="appDateMax" name="appdatemaxbox"> <br>
-          <label for="eventDesc">Description:</label>
-          <textarea id="S" name="s" rows="10" cols="75"></textarea>
+<body style="font-family: Arial">
+<div th:replace="navbar/show :: navbar" ></div>
+    <h1> CREATE YOUR EVENT </h1>
+    <form id="eventForm" action="AddItems" method="post">
+            <div class="box">
+                <span class="label"> Event Name</span>
+                <span class="ib"> <input type="text" name="event_name" id="event_name"/></span>
+            </div>
+            <div class="box">
+                <span class="label">Place </span>
+                <span class="ib"> <input type="text" name="place" id="place"/>
+                </span>
+            </div>
+            <div class="box">
+                <span class="label">Club  </span>
+                <span class="ib"><input type="text" name="club" id="club"/></span>
+            </div>
+            <div class="box">
+                <span class="label">Event Date</span>
+                <span class="ib">  <input type="date" name="item_size" id="item_size"/></span>
+                <span class="ib">  <input type="date" name="item_size" id="item_size"/></span>
+            </div>
+            <div class="box">
+                <span class="label">Application Period </span>
+                <span class="ib"><input type="date" name="item_supplier" id="item_supplier"/></span>
+                <span class="ib"><input type="date" name="item_supplier" id="item_supplier"/></span>
+            </div>
+            <div class="box">
+                <span class="label">Description </span>
+                <span class="ib">  <textarea id="S" name="s" rows="10" cols="75"></textarea></span>
+            </div>
+            <div class="box">
+                <span class="label">Upload a custom event thumbnail/header image
+                only one picture is allowed.</span>
+                <span class="ib">
+                <input type="submit" value="Upload thumbnail">
+                <span class="label">Preview:</span>
+            </div>
+            <div class="box">
+                <span class="label">Upload images for event slider. Older
+                pictures will be deleted.</span>
+                <span class="ib">
+                <input type="submit" value="Upload slider">
+                <span class="label">Preview:</span>
+            </div>
+            <input type="submit" value="Create Event">
         </form>
-    </div>
+
+		<button onclick="myFunction()">Try it</button>
+		<p id="demo"></p>
+		
+		<script>
+			function myFunction() {
+			  var x = document.getElementById("eventForm").elements[0].value;
+			  document.getElementById("demo").innerHTML = x;
+			}
+		</script>
 </body>
 </html>
