--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/%22%3E>
+<html lang="en" xmlns:th="https://www.thymeleaf.org/%22%3E">
 <head>
-    <title> Create Event </title>
     <meta charset="UTF-8">
     <title>Create Event Page</title>
     <style>
@@ -28,10 +27,6 @@
             width: 65%;
             margin: auto;
         }
-
-
-
-
         .picButton{
             height: 48px;
             background: #45818F;
@@ -109,7 +104,7 @@
             <div class="box" >
                 <span class="label">Event Date</span>
                 <span class="ib">  <input type="date" class="formInput" name="eventdateminbox" id="eventDateMin"/></span> -
-                <span class="ib">  <input type="date" class="formInput" name="eventdatemaxbox" id=eventDateMax"/></span>
+                <span class="ib">  <input type="date" class="formInput" name="eventdatemaxbox" id="eventDateMax"/></span>
             </div>
             <div class="box">
                 <span class="label">Application Deadline</span>
@@ -129,20 +124,11 @@
             <div class="box">
                 <span class="label">Upload images for event slider. Older
                 pictures will be deleted.</span>
-                <span class="ib">
+                <span class="ib"></span>
                 <input class="picButton" type="submit" value="Upload slider">
                 <span class="label">Preview:</span>
             </div>
             <input class="picButton" type="submit" value="Create Event">
         </form>
-
-		<p id="demo"></p>
-		
-		<script>
-			function myFunction() {
-			  var x = document.getElementById("eventForm").elements[0].value;
-			  document.getElementById("demo").innerHTML = x;
-			}
-		</script>
 </body>
 </html>
